--- a/package.json
+++ b/package.json
@@ -13,22 +13,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "accordion-collapse-react-native": "^0.4.0",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
     "expo-constants": "~9.2.0",
+    "expo-document-picker": "~8.4.0",
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.1",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "firebase-admin": "^5.12.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
