--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
     "firebase-admin": "^5.12.1",
+    "native-base": "^2.15.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
